convert script from babashka to bash